--- a/index.ipynb
+++ b/index.ipynb
@@ -76,7 +76,7 @@
    "source": [
     "travel_month # \"January\"\n",
     "travel_month = \"January\"\n",
-    "travel_month"
+    "travel_month\n"
    ]
   },
   {
