Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -70,9 +70,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'January'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "travel_month # \"January\"\n",
     "travel_month = \"January\"\n",
@@ -88,10 +99,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "number_of_weeks = None"
@@ -105,7 +114,8 @@
    },
    "outputs": [],
    "source": [
-    "number_of_weeks # 3"
+    "number_of_weeks # 3\n",
+    "nu"
    ]
   },
   {
