Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -108,14 +108,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "number_of_weeks # 3\n",
-    "nu"
+    "number_of_weeks = 3"
    ]
   },
   {
