Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -125,23 +125,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "number_of_weeks # 5\n",
-    "num"
+    "number_of_weeks = 5"
    ]
   },
   {
