Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -54,8 +54,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "travel_month = None"
@@ -70,24 +72,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'January'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'travel_month' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-faa1182bdbae>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtravel_month\u001b[0m \u001b[0;31m# \"January\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mtravel_month\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"January\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mtravel_month\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'travel_month' is not defined"
+     ]
     }
    ],
    "source": [
     "travel_month # \"January\"\n",
     "travel_month = \"January\"\n",
-    "travel_month\n"
+    "travel_month"
    ]
   },
   {
@@ -99,8 +102,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "number_of_weeks = None"
@@ -108,12 +113,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "number_of_weeks # 3\n",
-    "number_of_weeks = 3"
+    "number_of_weeks # 3"
    ]
   },
   {
@@ -125,12 +131,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "number_of_weeks # 5\n",
-    "number_of_weeks = 5"
+    "number_of_weeks # 5"
    ]
   },
   {
